tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs
use echo_math::*;

fn step<T: DeterministicScalar>(dt: T) {}

fn main() {
    let dt: f32 = 0.1;
    step(dt); // should fail
}