tests/compile/compile_fail/det_vs_nondet_f32_into_det.stderr
error[E0277]: the trait bound `f32: echo_math::DeterministicScalar` is not satisfied
 --> tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs:7:10
  |
7 |     step(dt); // should fail
  |     ---- ^^ the trait `echo_math::DeterministicScalar` is not implemented for `f32`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `echo_math::DeterministicScalar`:
            DFix64
            F32Det
note: required by a bound in `step`
 --> tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs:3:12
  |
3 | fn step<T: DeterministicScalar>(dt: T) {}
  |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `step`

warning: unused variable: `dt`
 --> tests/compile/compile_fail/det_vs_nondet_f32_into_det.rs:3:33
  |
3 | fn step<T: DeterministicScalar>(dt: T) {}
  |                                 ^^ help: if this is intentional, prefix it with an underscore: `_dt`
  |
  = note: `#[warn(unused_variables)]` on by default
